--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ title: おおたの部屋
 description: jupyter notebook がそのままブログになりました。
 github_username: Shoheihe1
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "fastpages"
+github_repo: "fanfan"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://fastpages.fast.ai" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https:/Shoheihe1.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
