--- a/_action_files/settings.ini
+++ b/_action_files/settings.ini
@@ -1,13 +1,13 @@
 [DEFAULT]
 lib_name = nbdev
-user = fastai
+user = Shoheihe1
 branch = master
 version = 0.2.10
 description = Writing a library entirely in notebooks
 keywords = jupyter notebook
 author = Sylvain Gugger and Jeremy Howard
 author_email = info@fast.ai
-baseurl = 
+baseurl = "/fanfan"
 title = nbdev
 copyright = fast.ai
 license = apache2
