--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: おおたの部屋
+title: しょうへい逍遥遊
 description: jupyter notebook がそのままブログになりました。
 github_username: Shoheihe1
 # you can comment the below line out if your repo name is not different than your baseurl
